--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,11 +31,13 @@ services:
       DATABASE_URL: postgres://postgres:password@postgres:5432/oatdb
       # Server configuration  
       OAT_SERVER_HOST: 0.0.0.0
-      OAT_SERVER_PORT: 3001
+      OAT_SERVER_PORT: 7061
       # Rust specific
       RUST_LOG: info
+      # Disable seed data loading
+      LOAD_SEED_DATA: "false"
     ports:
-      - "3001:3001"
+      - "7061:7061"
     depends_on:
       postgres:
         condition: service_healthy
@@ -44,21 +46,5 @@ services:
       # Mount logs directory if needed
       - ./logs:/app/logs
 
-  # Optional: pgAdmin for database management
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: oatdb_pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@oatdb.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
-    ports:
-      - "5050:80"
-    depends_on:
-      - postgres
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
-
 volumes:
   postgres_data:
-  pgadmin_data:
