--- a/Dockerfile.standalone
+++ b/Dockerfile.standalone
@@ -1,17 +1,21 @@
-# Standalone Dockerfile with embedded PostgreSQL
-FROM rust:1.86 AS builder
+FROM rust:1.86
 
 WORKDIR /app
 
-# Install build dependencies including GLPK
+# Install PostgreSQL and build dependencies
 RUN apt-get update && apt-get install -y \
+    ca-certificates \
+    libssl-dev \
     libglpk-dev \
     pkg-config \
     build-essential \
     wget \
+    postgresql-15 \
+    postgresql-client-15 \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Detect architecture and set paths accordingly
+# Detect architecture and set up GLPK paths
 RUN ARCH=$(dpkg --print-architecture) && \
     if [ "$ARCH" = "amd64" ]; then \
         LIBDIR="/usr/lib/x86_64-linux-gnu"; \
@@ -22,8 +26,6 @@ RUN ARCH=$(dpkg --print-architecture) && \
     fi && \
     echo "Architecture: $ARCH, Library directory: $LIBDIR" && \
     export PKG_CONFIG_PATH="/usr/lib/pkgconfig:$LIBDIR/pkgconfig:/usr/share/pkgconfig" && \
-    export GLPK_LIB_DIR="$LIBDIR" && \
-    export GLPK_INCLUDE_DIR="/usr/include" && \
     mkdir -p "$LIBDIR/pkgconfig" && \
     echo "prefix=/usr" > "$LIBDIR/pkgconfig/glpk.pc" && \
     echo "exec_prefix=\${prefix}" >> "$LIBDIR/pkgconfig/glpk.pc" && \
@@ -36,43 +38,7 @@ RUN ARCH=$(dpkg --print-architecture) && \
     echo "Libs: -L$LIBDIR -lglpk" >> "$LIBDIR/pkgconfig/glpk.pc" && \
     echo "Cflags: -I\${includedir}" >> "$LIBDIR/pkgconfig/glpk.pc"
 
-# Set environment variables for the build
-ENV PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/share/pkgconfig
-
-# Copy manifests
-COPY Cargo.toml Cargo.lock ./
-COPY .sqlx .sqlx
-
-# Copy source code
-COPY src ./src
-COPY migrations ./migrations
-
-# Build in release mode with SQLx offline
-ENV SQLX_OFFLINE=true
-RUN cargo build --release
-
-# Runtime stage with PostgreSQL
-FROM debian:bookworm-slim
-
-# Install runtime dependencies including PostgreSQL
-RUN apt-get update && apt-get install -y \
-    ca-certificates \
-    libssl3 \
-    libglpk40 \
-    postgresql-15 \
-    postgresql-client-15 \
-    supervisor \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy the binary
-COPY --from=builder /app/target/release/oat-db-rust /usr/local/bin/oat-db-rust
-
-# Create app directory and copy migrations
-RUN mkdir -p /app
-COPY --from=builder /app/migrations /app/migrations
-
-# Setup PostgreSQL
+# Set up PostgreSQL
 USER postgres
 RUN /etc/init.d/postgresql start && \
     psql --command "CREATE USER oatadmin WITH SUPERUSER PASSWORD 'embedded';" && \
@@ -85,11 +51,44 @@ USER root
 RUN sed -i "s/#listen_addresses = 'localhost'/listen_addresses = '*'/" /etc/postgresql/15/main/postgresql.conf && \
     echo "host all all 127.0.0.1/32 md5" >> /etc/postgresql/15/main/pg_hba.conf
 
-# Copy startup script
-COPY start-standalone.sh /start.sh
-RUN chmod +x /start.sh
+# Copy source code and migrations
+COPY Cargo.toml Cargo.lock ./
+COPY src ./src
+COPY migrations ./migrations
+COPY scripts ./scripts
+COPY .sqlx .sqlx
 
-# Set environment variables
+# Set environment variables for build
+ENV PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/share/pkgconfig
+ENV DATABASE_URL="postgresql://oatadmin:embedded@localhost:5432/oatdb"
+
+# Install sqlx-cli
+RUN cargo install sqlx-cli --no-default-features --features postgres
+
+# Start PostgreSQL, run migrations, and build the app
+RUN service postgresql start && \
+    # Wait for PostgreSQL to be ready
+    until pg_isready -h localhost -p 5432 -U postgres; do \
+        echo "Waiting for PostgreSQL..."; \
+        sleep 2; \
+    done && \
+    # Run migrations
+    if [ -d "migrations" ]; then \
+        for migration in migrations/*.sql; do \
+            if [ -f "$migration" ]; then \
+                echo "Running migration: $migration"; \
+                PGPASSWORD=embedded psql -h localhost -U oatadmin -d oatdb -f "$migration" || echo "Migration had errors"; \
+            fi; \
+        done; \
+    fi && \
+    # Generate sqlx metadata if needed
+    cargo sqlx prepare --database-url="${DATABASE_URL}" || true && \
+    # Build the application (sqlx macros will validate against running database)
+    cargo build --release && \
+    # Stop PostgreSQL after build
+    service postgresql stop
+
+# Set runtime environment variables
 ENV DATABASE_URL="postgresql://oatadmin:embedded@localhost:5432/oatdb" \
     OAT_SERVER_HOST="0.0.0.0" \
     OAT_SERVER_PORT="7061" \
@@ -107,5 +106,11 @@ EXPOSE 7061
 HEALTHCHECK --interval=30s --timeout=10s --start-period=90s --retries=5 \
     CMD curl -f http://localhost:7061/health || exit 1
 
-# Start services
-CMD ["/start.sh"]
+# Start PostgreSQL and then the Rust application
+CMD service postgresql start && \
+    until pg_isready -h localhost -p 5432 -U postgres; do \
+        echo "Waiting for PostgreSQL..."; \
+        sleep 2; \
+    done && \
+    echo "PostgreSQL is ready!" && \
+    /app/target/release/oat-db-rust
